--- a/web/apps/synapse/src/index.html
+++ b/web/apps/synapse/src/index.html
@@ -7,6 +7,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  
+  <!-- Google Fonts for Hero Section -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&family=VT323&family=Press+Start+2P&family=Share+Tech+Mono&family=Silkscreen&family=Major+Mono+Display&family=Orbitron:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="root"></div>
